Add GET /exif/regen endpoint to force EXIF metadata regeneration (#112)
* Initial plan

* Add /exif/regen endpoint with authentication and tests


* Use relative module path for mass_exif_process call


---------
